[package]
name = "parsec-service"
version = "0.7.2"
authors = ["Parsec Project Contributors"]
description = "A language-agnostic API to secure services in a platform-agnostic way"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec"
readme = "README.md"
keywords = ["security", "service"]
categories = ["cryptography", "hardware-support"]
edition = "2018"

[[bin]]
name = "parsec"
path = "src/bin/main.rs"

[dependencies]
parsec-interface = { git = "https://github.com/parallaxsecond/parsec-interface-rs.git", rev = "6b951390791b398b76eb02c942e24d7c91acc980"}
rand = { version = "0.8.3", features = ["small_rng"], optional = true }
base64 = "0.13.0"
uuid = "0.8.2"
threadpool = "1.8.1"
signal-hook = "0.3.4"
sd-notify = "0.2.0"
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
env_logger = "0.8.3"
log = { version = "0.4.14", features = ["serde"] }
cryptoki = { git = "https://github.com/parallaxsecond/rust-cryptoki", rev = "916f9bbb208ba8a671c593a36313f09c60cd0255", optional = true, features = ["psa-crypto-conversions"] }
picky-asn1-der = { version = "<=0.2.4", optional = true }
picky-asn1 = { version = ">=0.3.1, <=0.3.1", optional = true }
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi", rev = "1f68655e278b0319c080b9804a7bf3f6e11ff721", optional = true }
bincode = "1.3.1"
structopt = "0.3.21"
derivative = "2.2.0"
version = "3.0.0"
hex = { version = "0.4.2", optional = true }
psa-crypto = { git = "https://github.com/parallaxsecond/rust-psa-crypto.git", rev = "8605006d34944fa880edd3d4d347f460c5585747", default-features = false, features = ["operations"], optional = true }
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
picky-asn1-x509 = { version = "0.4.0", optional = true }
users = "0.11.0"
libc = "0.2.86"
anyhow = "1.0.38"
rust-cryptoauthlib = { version = "0.4.0", optional = true }
spiffe = { version = "0.1.1", optional = true }
prost = { version = "0.7.0", optional = true }

[dev-dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
rust-cryptoauthlib = { version = "0.4.0", features=["software-backend"]}

[build-dependencies]
bindgen = { version = "0.57.0", optional = true }
prost-build = { version = "0.7.0", optional = true }

[package.metadata.docs.rs]
features = ["pkcs11-provider", "tpm-provider", "mbed-crypto-provider", "cryptoauthlib-provider", "direct-authenticator"]

# The features should not be modified in a breaking way.
# See https://github.com/parallaxsecond/parsec/issues/408 for details.
[features]
default = ["unix-peer-credentials-authenticator"]

# Providers
mbed-crypto-provider = ["psa-crypto"]
pkcs11-provider = ["cryptoki", "picky-asn1-der", "picky-asn1", "picky-asn1-x509", "psa-crypto", "rand"]
tpm-provider = ["tss-esapi", "picky-asn1-der", "picky-asn1", "picky-asn1-x509", "hex"]
cryptoauthlib-provider = ["rust-cryptoauthlib"]
trusted-service-provider = ["psa-crypto", "bindgen", "prost-build", "prost"]
all-providers = ["tpm-provider", "pkcs11-provider", "mbed-crypto-provider", "cryptoauthlib-provider"]

# Authenticators
direct-authenticator = []
unix-peer-credentials-authenticator = []
jwt-svid-authenticator = ["spiffe"]
all-authenticators = ["direct-authenticator", "unix-peer-credentials-authenticator", "jwt-svid-authenticator"]
