[package]
name = "parsec-service"
version = "1.5.0"
authors = ["Parsec Project Contributors"]
description = "A language-agnostic API to secure services in a platform-agnostic way"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec"
readme = "README.md"
keywords = ["security", "service"]
categories = ["cryptography", "hardware-support"]
edition = "2024"
rust-version = "1.85.0"

[[bin]]
name = "parsec"
path = "src/bin/main.rs"

[dependencies]
parsec-interface = "0.30.0"
rand = { version = "0.8.6", features = ["small_rng"], optional = true }
base64 = "0.22.1"
threadpool = "1.8.1"
signal-hook = "0.4.4"
sd-notify = "0.5.0"
toml = "1.1.2"
serde = { version = "1.0.123", features = ["derive"] }
env_logger = "0.11.10"
log = { version = "0.4.14", features = ["serde"] }
cryptoki = { version = "0.12.0", optional = true, default-features = false }
picky-asn1-der = { version = "0.5.6", optional = true }
picky-asn1 = { version = "0.10.1", optional = true }
picky-asn1-x509 = { version = "0.15.4", optional = true }
tss-esapi = { version = "7.7.0", optional = true }
bincode = "1.3.3"
clap = { version = "4.6.1", features = ["derive", "std"] }
derivative = "2.2.0"
hex = { version = "0.4.2", optional = true }
psa-crypto = { version = "0.13.0", default-features = false, features = ["operations","std"], optional = true }
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
libc = "0.2.86"
anyhow = "1.0.38"
rust-cryptoauthlib = { version = "0.4.5", optional = true }
spiffe = { version = "0.2.1", optional = true }
prost = { version = "0.9.0", optional = true }
rusqlite = { version = "0.29.0", features = ["bundled"] }
num-traits = "0.2.14"

# The crates below are used by dependencies.
# Fix versions with MSRV <= 1.85
# v0.5.12 has MSRV 1.88
home = { version = "=0.5.11", optional = true }
# v0.3.46 has MSRV 1.88
time = { version = "=0.3.45", optional = true }
# v2.2.0 has MSRV 1.86
icu_normalizer = { version = "=2.1.1", optional = true }
icu_provider = { version = "=2.1.1", optional = true }
icu_locale_core = { version = "=2.1.1", optional = true }

[dev-dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
rust-cryptoauthlib = { version = "0.4.4", features=["software-backend"]}

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
prost-build = { version = "0.9.0", optional = true }

[package.metadata.docs.rs]
features = ["pkcs11-provider", "tpm-provider", "mbed-crypto-provider", "cryptoauthlib-provider", "direct-authenticator"]

# The features should not be modified in a breaking way.
# See https://github.com/parallaxsecond/parsec/issues/408 for details.
[features]
default = ["unix-peer-credentials-authenticator"]

# Providers
mbed-crypto-provider = ["psa-crypto"]
pkcs11-provider = ["cryptoki", "picky-asn1-der", "picky-asn1", "picky-asn1-x509", "psa-crypto", "rand", "hex"]
tpm-provider = ["tss-esapi", "picky-asn1-der", "picky-asn1", "picky-asn1-x509", "hex"]
cryptoauthlib-provider = ["rust-cryptoauthlib"]
trusted-service-provider = ["psa-crypto", "bindgen", "prost-build", "prost"]
all-providers = ["tpm-provider", "pkcs11-provider", "mbed-crypto-provider", "trusted-service-provider"]

# Authenticators
direct-authenticator = []
unix-peer-credentials-authenticator = []
jwt-svid-authenticator = ["spiffe"]
all-authenticators = ["direct-authenticator", "unix-peer-credentials-authenticator", "jwt-svid-authenticator"]
