# This crate should NOT be upstreamed to crates.io; it is only intended for
# PARSEC testing purposes (both locally and on CI)
[package]
name = "e2e_tests"
version = "0.1.0"
authors = ["Parsec Project Contributors"]
description = "End to end testing framework for PARSEC"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
parsec-client = { git = "https://github.com/parallaxsecond/parsec-client-rust", rev = "bf01a58fe20a65f6151fc32c7c6c9d09ae7b741f", features = ["testing", "spiffe-auth"] }
log = "0.4.14"
# Compatible version with crate rsa
rand = "0.7.3"
env_logger = "0.8.3"
stdext = "0.3.1"
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi.git", rev = "62fb9b7b05b1e607518ae127406f3b85991205b9", optional = true }

[dev-dependencies]
ring = "0.16.20"
rsa = "0.3.0"
picky-asn1-x509 = "0.6.1"
base64 = "0.13.0"
num_cpus = "1.13.0"
picky-asn1-der = "0.2.4"
picky-asn1 = "0.3.1"
sha2 = "0.9.3"
serial_test = "0.5.1"
regex = "1.6.0"
cryptoki = "0.3.0"
snailquote = "0.3.1"

[features]
mbed-crypto-provider = []
tpm-provider = ["tss-esapi"]
pkcs11-provider = []
cryptoauthlib-provider = []
trusted-service-provider = []
all-providers = ["pkcs11-provider","tpm-provider","mbed-crypto-provider","cryptoauthlib-provider","trusted-service-provider"]
