
[package]
name = "parsec-fuzz"
version = "0.0.0"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
parsec-service = { path = "..", features = ["mbed-crypto-provider", "pkcs11-provider", "tpm-provider", "direct-authenticator"] }
libfuzzer-sys = "0.3.0"
flexi_logger = "0.14.5"
log = "0.4.8"
toml = "0.8.0"
lazy_static = "1.4.0"
arbitrary = { version = "0.4.0", features = ["derive"] }

[build-dependencies]
parsec-client = { version = "0.16.0", features = ["testing", "spiffe-auth"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_service"
path = "fuzz_targets/fuzz_service.rs"

[features]
mbed-crypto-provider = []
tpm-provider = []
pkcs11-provider = []
