[package]
name = "service"
version = "0.1.0"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"

[dependencies]
interface = { path = "../interface/interface-rs"  }
num = "0.2.0"
crossbeam = "0.7.2"

[build-dependencies]
bindgen = "0.50.0"
cargo_toml = "0.7.0"
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.config]
mbed-crypto-version = "mbedcrypto-1.1.0"

[features]
default = ["mbed"]
mbed = []
