[package]
name = "minimal_client"
version = "0.1.0"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"

[dependencies]
interface = { path = "../../../interface/interface-rs"  }

[features]
default = ["testing"]
testing = ["interface/testing"]
