[package]
name = "minimal_client"
version = "0.1.0"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"

[dependencies]
interface = { path = "../../../interface/interface-rs"  }
num = "0.2.0"

[features]
default = ["testing"]
testing = ["interface/testing"]
